# WAMCer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  main.cpp  setup.sh
async/: asyncPreds.cpp  asyncPreds.h  asyncTermSet.cpp  asyncTermSet.h
btors/: buffer.btor2  counter-101.btor2  memory.btor2  memory2.btor2  memory3.btor2  memory32.btor2  memory3x2.btor2
btors/cpu/: testbench.btor2  testbench_err.btor2
core/: runner.cpp  runner.h  solverFactory.cpp  solverFactory.h  ts.cpp  ts.h  unroller.cpp  unroller.h
engines/: AutoRestartBMC.cpp  AutoRestartBMC.h  BMCChecker.cpp  BMCChecker.h  DirectConstructor.cpp  DirectConstructor.h  InductionProver.cpp  InductionProver.h  InterpolantBmc.cpp  InterpolantBmc.h  InvConstructor.cpp  InvConstructor.h  PredCP.cpp  PredCP.h  bmc.cpp  bmc.h  fbmc.cpp  fbmc.h  filterWithSimulation.cpp  filterWithSimulation.h  k_induction.cpp  k_induction.h  pdr.cpp  pdr.h  transitionFolder.cpp  transitionFolder.h  wamcer.h
frontends/: btor2_encoder.cpp  btor2_encoder.h  btorSim.cpp  btorSim.h
tests/: CMakeLists.txt  cases_test.cpp  engines_test.cpp  hwmcc_test.cpp  learning_test.cpp  runner_test.cpp  solver_test.cpp  utils_test.cpp
tests/cases/: counter.cpp  counter.h
utils/: config.h  defines.h  logger.cpp  logger.h  timer.cpp  timer.h
